removed some of the triangularization stuff from determinant controller.